# cpp-project-template

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.MD  build.bat  build.sh  run_docker.sh
.circleci/: config.yml
.circleci/images/primary/: Dockerfile
.github/workflows/: dockerimage.yml
ext/: CMakeLists.txt
ext/googletest-download/: CMakeLists.txt  CMakeLists.txt.in  change_required_cxx_version.py  change_required_cxx_version.py.in  collect_tests.py  collect_tests.py.in
src/: .gitignore  CMakeLists.txt  configuration.hh.in  configured_main.hh  main.cxx
src/Graphic/: AbstractGraphicsFactory.hh  GraphicsInterface.hh
src/Uitlity/Random/: SeededGenerator.hpp
tests/: .gitignore  SimpleTest.test.hpp
